# ghost-post-dj

./: pyproject.toml
ghostpost/: settings.py  urls.py
ghostpost_app/: forms.py  models.py  urls.py  views.py
ghostpost_app/migrations/: 0001_initial.py
templates/: base.html  boasts.html  generic_form.html  index.html  roasts.html
